--- a/app/views/tweets.erb
+++ b/app/views/tweets.erb
@@ -1,6 +1,6 @@
 This is the tweets page!
 
 <h2>Welcome, <%=@user.username%></h2>
-<form action="/logout" method="post">
+<form action="/logout" method="get">
   <input type="submit"  value="Logout">
-</form
+</form>
