--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,5 +1,5 @@
 <h3>To sign-up please enter all the information below</h3>
-<form action="/signup"  method="post">
+<form action="/users/signup"  method="post">
 Username:<input type="text" name="username"></br>
 E-Mail:<input type="text" name="email"></br>
 Password: <input type="text" name="password"></br>
