--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -11,6 +11,6 @@ These are all the tweets!
 <%end%>
 
 
-<form action="/logout" method="get">
+<form action="/users/logout" method="get">
   <input type="submit"  value="Logout">
 </form>
