--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 This is the login page
-<form action '/tweets' method="post">
+<form action '/login' method="post">
   Username: <input type="text"  name="username"></br>
   Password:<input type="text" name="password"></br>
   <input type="submit" value="submit">
