--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-<form>
+<form action="/users/<%=@user.username%>" method="post">
   <input type="text" name='content'>
-  <input type="submit" value="Tweet">
+  <input type="submit" value="submit">
 </form>
