--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,5 @@
 <h3>Edit tweet info</h3>
-<form action='/tweets' method="post">
+<form action='/tweets/<%=tweet.id%>' method="post">
   <input type="hidden" id="hidden" name="_method" value="patch">
   <input type='text' name= 'content' value='<%=@tweet.content%>'></br>
   <input type="submit" value="submit">
