--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,6 @@
-This is a single users tweets
+This is a single users tweets</br>
+
+<h1>Tweet Tweet!!</h1>
 <%@tweets.each do |tweet| %>
-  <a href ='/tweets/<%=tweet.id%>'><%=tweet.content%></a>
+  <a href ='/tweets/<%=tweet.id%>'><%=tweet.content%></a></br>
 <%end%>
