--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,11 +1,11 @@
 <h3>Single tweet info</h3>
 Tweet: <%=@tweet.content%></br>
 Tweeted by user: <%=@tweet.user.username%></br>
-<form action="/tweets/edit" method="post">
+<form action="/tweets/<%=@tweet.id%>" method="post">
   <input type="hidden" id="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
-<form action="/tweets/delete" method="post">
-
+<form action="/tweets/<%=@tweet.id%>" method="post">
+<input type="hidden" id="hidden" name="_method" value="patch">
   <input type="submit" value="Edit Tweet">
 </form>
